ApexBasics/force-app/main/default/objects/Interviewer1__c/Interviewer1__c.object-meta.xml
<CustomObject>
    <label>Interviewer</label>
    <nameField>
        <displayFormat>I-ID-{0000}</displayFormat>
        <label>Interviewer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>