ApexBasics/force-app/main/default/objects/Interviewer1__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Interviewers (Company)</relationshipLabel>
    <relationshipName>Interviewers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>