ApexBasics/force-app/main/default/objects/Interviewer1__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>