ApexBasics/force-app/main/default/objects/Interviewer1__c/fields/Position_Designation__c.field-meta.xml
<CustomField>
    <fullName>Position_Designation__c</fullName>
    <label>Position/Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>