ApexBasics/force-app/main/default/objects/Interviewer1__c/fields/Studio__c.field-meta.xml
<CustomField>
    <fullName>Studio__c</fullName>
    <label>Studio</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>